# hydrant-compat

./: ambiata-hydrant.cabal  hydrant-compat.cabal
src/Hydrant/: Monadic.hs
test/: bench.hs
